<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/traceback"
        android:src="@drawable/traceback"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:contentDescription="返回"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_blink"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_equalizer"
        android:contentDescription="设置"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <LinearLayout
        android:id="@+id/card1"
        android:layout_width="343dp"
        android:layout_height="155dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_grey"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/bg_rounded"
            android:orientation="vertical">
            <TextView
                android:id="@+id/siganl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=". . . _ _ _ . . ."
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_morse_code"
                android:layout_marginTop="10dp"
                android:textColor="@color/grey"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_sos"
                android:layout_marginTop="3dp"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_sos_signal"
                android:textColor="@color/white"
                android:layout_marginStart="12dp"
                android:textSize="14sp" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/SOS"
                android:layout_width="86dp"
                android:layout_height="30dp"
                android:background="@drawable/bg_sos_button"
                android:text="@string/btn_sos"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card2"
        android:layout_width="343dp"
        android:layout_height="306dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_grey"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/layout_blink"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_rounded_selector"
            app:layout_constraintEnd_toStartOf="@+id/layout_screen_light"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="手电筒"
                android:src="@drawable/ic_flash_differ"
                app:tint="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_flashlight"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_screen_light"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="11dp"
            android:background="@drawable/bg_rounded_selector"
            app:layout_constraintTop_toTopOf="@id/layout_blink"
            app:layout_constraintStart_toEndOf="@id/layout_blink"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="屏幕"
                android:src="@drawable/ic_phone"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/screen"
                android:textColor="@color/white"
                android:textSize="16sp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@id/layout_blink"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="11dp"
            android:text="@string/blink_frequency"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/card_left"
            android:layout_width="wrap_content"
            android:minWidth="98dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_rounded_selector"
            android:orientation="vertical"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:padding="4dp"
            app:layout_constraintEnd_toStartOf="@+id/card_middle"
            app:layout_constraintTop_toTopOf="@+id/card_middle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frequency_low"
                android:textSize="18sp"
                android:textColor="@color/pure_white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="1Hz"
                android:textSize="18sp"
                android:textColor="@color/pure_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_middle"
            android:layout_width="wrap_content"
            android:minWidth="98dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_rounded_selector"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="14dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frequency_medium"
                android:textSize="18sp"
                android:textColor="@color/pure_white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="3Hz"
                android:textSize="18sp"
                android:textColor="@color/pure_white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_right"
            android:layout_width="wrap_content"
            android:minWidth="98dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_rounded_selector"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_marginStart="15dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/card_middle"
            app:layout_constraintTop_toTopOf="@+id/card_middle">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/frequency_high"
                android:textSize="18sp"
                android:textColor="@color/pure_white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="5Hz"
                android:textSize="18sp"
                android:textColor="@color/pure_white" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start_blink"
            android:layout_width="323dp"
            android:layout_height="53dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:background="@drawable/btn_light_blue_selector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_left"
            android:text="@string/btn_blink"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#131313"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_nav"
        app:menu="@menu/bottom_nav_menu"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextColor="@color/bottom_nav_color"
        app:itemBackground="@null"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>